@@ -15,6 +15,7 @@
   * Switch the information/SSMIF for the north arm site to lwana instead of lwa2 to avoid confusion with the SV site
   * Renamed the lsl.common.stations.LWAStation.getECEFTransform() function to getECITransform() to reflect what is really happening
   * Added a function to lsl.imaging.utils to make it easy to re-phase a data dictionary to a new pointing center
+  * Added new functions to the LWAStation class to deal with direction and distance to other stations/points on the Earth
 
 0.6.6
   * Fixed a problem with older NumPy installs not having a close() function
